--- a/README.adoc
+++ b/README.adoc
@@ -10,14 +10,12 @@ image:{img-qg-status}[Quality Gate Status,link={uri-qg-status}]
 
 *This project is analysed on https://sonarcloud.io/dashboard?id=sonarsource-cfamily-examples_macos-xcode-gh-actions-sc[SonarCloud]!*
 
-:note-caption: :information_source:
-NOTE: This simple example ignores https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/#analysis-cache[analysis cache] and https://docs.sonarcloud.io/advanced-setup/languages/c-c-objective-c/#parallel-code-scan[multithreaded execution] both of which can boost analysis significantly.
 
 It is very easy to analyze a C, C++ and Objective-C project with SonarCloud and https://docs.sonarcloud.io/getting-started/github/[GitHub Actions]:
 
 . Create a `sonar-project.properties` file to store your configuration
 . In your `.github/workflows/build.yml` file:
-.. Download the Sonar Scanner and Build Wrapper using https://github.com/SonarSource/sonarcloud-github-c-cpp-addition[SonarCloud C/C++ Github Action]:
+.. Download the Sonar Scanner and Build Wrapper using https://github.com/SonarSource/sonarcloud-github-c-cpp-addition[SonarCloud C and C++ Github Action]:
 .. Wrap your compilation with the Build Wrapper
 .. Run `sonar-scanner` as the final step
 . Ensure that your token is stored as a secret in your repository (`SONARCLOUD_TOKEN` in this example project). You can request new tokens using https://sonarcloud.io/account/security/[Account/Security page].
@@ -42,9 +40,9 @@ dyld: warning: could not load inserted library '/Users/runner/.sonar/build-wrapp
 ----
 For details please refer to following https://jira.sonarsource.com/browse/CPP-1640[ticket] and https://community.sonarsource.com/t/dyld-warning-could-not-load-inserted-library-applications-sonar-scanner-bin-libinterceptor-dylib-into-hardened-process-because-no-suitable-image-found/1806[community thread].
 
-= MacOS\XCodeBuild
+= macOS\XCodeBuild
 
-A build of the https://github.com/sonarsource-cfamily-examples/code[code repository] on a MacOS using XCode build system.
+A build of the https://github.com/sonarsource-cfamily-examples/code[code repository] on a macOS using XCode build system.
 
 To build the code run from the repository root directory:
 ----
@@ -53,7 +51,7 @@ xcodebuild
 
 = Code Description
 
-An example of a flawed C++ code. The https://github.com/sonarsource-cfamily-examples/code[code repository] is meant to be compiled with different build systems using different CI pipelines on Linux, MacOS, and Windows.
+An example of a flawed C++ code. The https://github.com/sonarsource-cfamily-examples/code[code repository] is meant to be compiled with different build systems using different CI pipelines on Linux, macOS, and Windows.
 
 The https://github.com/sonarsource-cfamily-examples/code[code repository] is forked into other repositories in https://github.com/sonarsource-cfamily-examples[this collection] to add a specific build system, platform, and CI.
 The downstream repositories are analyzed either with https://www.sonarqube.org/[SonarQube] or https://sonarcloud.io/[SonarCloud].
@@ -61,7 +59,7 @@ The downstream repositories are analyzed either with https://www.sonarqube.org/[
 You can find examples for:
 
 * https://github.com/sonarsource-cfamily-examples?q=linux[Linux]
-* https://github.com/sonarsource-cfamily-examples?q=macos[MacOS]
+* https://github.com/sonarsource-cfamily-examples?q=macos[macOS]
 * https://github.com/sonarsource-cfamily-examples?q=windows[Windows]
 
 Using the following build systems:
